# GetPost

./: README.md  pyproject.toml  server.py
src/getpost/: __init__.py
static/: index.html
