[project]
name = "getpost"
version = "0.1.0"
description = "GET/POSTのテスト"
authors = [
    { name = "rsimd", email = "mriki@ichinoseki.ac.jp" }
]
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn>=0.32.0",
    "ipython>=8.29.0",
    "python-multipart>=0.0.17",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/getpost"]
